# AbaqusPortfolio

./: .gitignore  README.md  datos.xlsx  manage.py  processing.ipynb  pyproject.toml
AbaquesPortfolio/: asgi.py  settings.py  urls.py  wsgi.py
AbaqusPortfolio/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  forms.py  models.py  services.py  url.py  urls.py  utils.py  views.py
portfolio/common/: __init__.py  utils.py
portfolio/templates/: base.html
portfolio/templates/portfolio/: compare_data.html  evolution.html  index.html  transaction_form.html  transaction_list.html  upload.html  upload_success.html
