[tool.poetry]
name = "abaqus"
version = "0.1.0"
description = "abaqus portafolio"
authors = ["sebatianbreguel <breguelsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
