[tool.poetry]
name = "abaqus"
version = "0.1.0"
description = "abaqus portafolio"
authors = ["sebatianbreguel <breguelsebastian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
django = "^5.0.6"
openpyxl = "^3.1.3"
djangorestframework = "^3.15.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_third_party = ["django"]